# zed-xpls-vibe

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  extension.toml  release-please-config.json  rust-toolchain.toml
.github/workflows/: bump-vibe-xpls.yml  ci.yml  dev-build.yml  release.yml
docs/superpowers/: README.md  decisions.md
docs/superpowers/plans/: 2026-05-05-crossplane-yaml-template-highlighting.md  2026-05-05-zed-up-xpls.md  2026-05-11-crossplane-mixed-template-highlighting.md  2026-05-19-crossplane-generated-yaml-stock-capture-spike.md  2026-05-19-zed-xpls-vibe-public-release.md  2026-05-20-crossplane-yaml-public-rename.md  2026-05-20-vibe-xpls-checksum-verification.md  2026-05-20-vibe-xpls-download-and-version-policy.md  2026-05-21-reviewable-vibe-xpls-bump-workflow.md
docs/superpowers/specs/: 2026-05-05-crossplane-yaml-long-term-deferred-design.md  2026-05-05-crossplane-yaml-short-term-design.md  2026-05-05-crossplane-yaml-template-highlighting-design.md  2026-05-05-zed-up-xpls-design.md  2026-05-19-crossplane-generated-yaml-highlighting-design.md  2026-05-19-zed-xpls-vibe-public-release-design.md  2026-05-20-crossplane-yaml-public-rename-design.md  2026-05-20-vibe-xpls-archive-checksum-verification-design.md  2026-05-20-vibe-xpls-download-and-version-policy-design.md  (+1 more)
fixtures/crossplane-package/: crossplane.yaml
fixtures/not-crossplane/: config.yaml
languages/crossplane-yaml/: config.toml  highlights.scm  injections.scm
scripts/: bump-vibe-xpls-release.sh
src/: archive.rs  lib.rs  resolver.rs
(+6 files in other folders)
