[package]
name = "crossplane-yaml"
version = "0.0.3"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
flate2 = { version = "1.1.9", default-features = false, features = ["rust_backend"] }
sha2 = "0.10.9"
tar = { version = "0.4.46", default-features = false }
zed_extension_api = "0.7.0"
zip = { version = "5.1.1", default-features = false, features = ["deflate-flate2"] }

[dev-dependencies]
tempfile = "3.27.0"
